--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 /* Trying to mix&match similar fonts, tried to define font for priority menu but its not a supported feature for selection drop-down menus. NOTE TO SELF-Try to implement */
-#control {
+body {
   font-family: "Dosis", sans-serif;
   font-size: 2em;
 }
