--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body {
 }
 button {
   font-family: inherit;
+  font-size: 0.5em;
 }
 li {
   list-style-type: none;
@@ -26,51 +27,61 @@ li {
 #counter-section {
   position: relative;
   font-size: 5vh;
-  bottom: 6vh;
   right: 4vw;
 }
 #sort-button {
-  position: relative;
+  position: absolute;
   background-color: inherit;
   border: none;
   font-weight: 800;
-  bottom: 14vh;
-  left: 23vh;
+  right: -40%;
+  bottom: 20%;
   font-size: 3vh;
 }
 #add-button {
+  position: absolute;
   background-color: inherit;
   border: none;
   font-weight: 800;
   font-size: 3vh;
+  height: 100%;
+  right: 20%;
 }
-
+#text-input {
+  size: 1;
+  position: absolute;
+  height: 86%;
+  background-color: inherit;
+  border: 5%, solid, black;
+  font-family: inherit;
+  width: 20%;
+  /* overflow-wrap: break-word; HOW DO YOU WRAP THE TEXT INPUT */
+}
+#priority-selector {
+  position: absolute;
+  height: 100%;
+  left: 30%;
+}
+#add-section {
+  position: relative;
+  height: 5vh;
+  top: 1.5vh;
+}
 #view {
   text-align: center;
   font-family: "Nunito", sans-serif;
   position: relative;
-  bottom: 14.8vh;
-  font-size: 3.3vh;
+  left: 7vw;
+  font-size: 0.6em;
   font-weight: 500;
+  top: 3.4vh;
 }
-#delete-button {
-  background-color: inherit;
-  height: 2.7vh;
-}
-#text-input {
-  background-color: inherit;
-  border: 5%, solid, black;
-  font-family: inherit;
-  height: 5%;
-  /* overflow-wrap: break-word; HOW DO YOU WRAP THE TEXT INPUT */
-}
-#add-section {
-  position: relative;
-  bottom: 14vh;
-}
+
 #delete-button {
   position: relative;
   bottom: 2vh;
+  background-color: inherit;
+  height: 2.7vh;
 }
 
 .todo-priority {
@@ -78,21 +89,19 @@ li {
   display: inline-block;
   padding-right: 1em;
   bottom: 3vh;
-}
-.todo-text::before {
-  content: "||   ";
+  right: 7vh;
 }
 .todo-text {
   position: relative;
   display: inline-block;
   bottom: 2.5vh;
-  padding-right: 1.5em;
+  right: 9vw;
 }
 .todo-created-at {
   display: inline-block;
   position: relative;
-  padding-right: 2em;
-  font-size: 2.4vh;
+  padding-right: 1em;
+  font-size: 2.5vh;
   bottom: 1vh;
-  line-height: 3.6vh;
+  right: 8vw;
 }
