--- a/src/stylenew.css
+++ b/src/stylenew.css
@@ -14,11 +14,15 @@ body {
   background-image: url(./assets/corkboard2.png);
   background-repeat: repeat;
   font-family: "Dosis", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #main {
   background-image: url(./assets/grey-paper-texture.png);
   padding: 2%;
+  width: 50%;
 }
 #view {
   font-family: "Nunito";
@@ -80,4 +84,49 @@ button {
   border-radius: 20%;
   color: blue;
   font-weight: 800;
+}
+@media screen and (max-width: 1000px) {
+  #main {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #main {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #main {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #main {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #main {
+    width: 100%;
+    font-size: 16px;
+  }
+  #counter-section {
+    font-size: 0;
+  }
+}
+#add-button {
+  cursor: pointer;
+}
+#add-button:hover {
+  transform: scale(1.1);
+}
+#sort-button:hover {
+  transform: scale(1.1);
+}
+#add-button {
+  cursor: pointer;
 }
