--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 /* Trying to mix&match similar fonts, tried to define font for priority menu but its not a supported feature for selection drop-down menus. NOTE TO SELF-Try to implement */
+
 body {
   font-family: "Dosis", sans-serif;
   font-size: 2em;
@@ -16,9 +17,8 @@ li {
   list-style-type: none;
 }
 #title {
-  font-size: 8.4vh;
+  font-size: 8vh;
   position: relative;
-  padding-top: 8.8vh;
   padding-left: 15vw;
 }
 #control {
@@ -28,7 +28,6 @@ li {
 #counter-section {
   position: relative;
   font-size: 4.5vh;
-  right: 8vw;
 }
 #sort-button {
   position: absolute;
@@ -57,18 +56,18 @@ li {
   font-family: inherit;
   font-size: 1em;
   right: 36%;
-  width: 25%;
+  width: 20%;
   /* overflow-wrap: break-word; HOW DO YOU WRAP THE TEXT INPUT */
 }
 #priority-selector {
   position: absolute;
-  height: 100%;
-  right: 65%;
+  height: 80%;
+  right: 60%;
 }
 #add-section {
   position: relative;
   height: 5vh;
-  top: 3vh;
+  top: 1.6vh;
 }
 #view {
   text-align: center;
@@ -77,7 +76,7 @@ li {
   left: 7vw;
   font-size: 0.6em;
   font-weight: 500;
-  top: 2.5vh;
+  top: 1.5vh;
 }
 
 #delete-button {
@@ -106,4 +105,29 @@ li {
   font-size: 2.5vh;
   bottom: 1vh;
   right: 8vw;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-instagram {
+  color: paleturquoise;
+}
+.fa-linkedin {
+  color: #007bb5;
+  border-radius: 60%;
+  font-size: 0.5vh;
+}
+.fa-github {
+  color: black;
+}
+.fa {
+  font-size: 2vh;
+  width: 6vw;
+  text-align: center;
+  text-decoration: none;
+}
+#links {
+  position: relative;
+  max-width: fit-content;
+  margin: auto;
 }
