--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,38 @@ li {
   background-color: inherit;
   height: 2.7vh;
 }
+#spinner {
+  /* visibility: hidden; */
+  width: 80px;
+  height: 80px;
 
+  border: 2px solid #f3f3f3;
+  border-top: 3px solid #f25a41;
+  border-radius: 100%;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+
+  animation: spin 1s infinite linear;
+  z-index: 1000;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* #spinner.show {
+  visibility: visible;
+} */
 .todo-priority {
   position: relative;
   display: inline-block;
