--- a/src/stylenew.css
+++ b/src/stylenew.css
@@ -158,7 +158,7 @@ button {
 }
 
 #spinner {
-  visibility: hidden;
+  /* visibility: hidden; */
   width: 80px;
   height: 80px;
 
@@ -174,6 +174,7 @@ button {
   margin: auto;
 
   animation: spin 1s infinite linear;
+  z-index: 1000;
 }
 
 @keyframes spin {
@@ -185,6 +186,6 @@ button {
   }
 }
 
-#spinner.show {
+/* #spinner.show {
   visibility: visible;
-}
+} */
